test_suite/ERROR_no_matching_method.out
A.test: 0
B.foo: 0
C.foo: 8
ERROR_no_matching_method.java: 10:  Semantic Error: No matching method with id: `foo`
